fix height issue from @roro's calendar truncation commit

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -42,6 +42,7 @@ input[type="text"]:focus {
 .all-cols-container {
   overflow: hidden;
   position: relative;
+  min-height: calc(100vh - 175px);
 }
 
 .cal-container {
